# disboard

./: Board.qml  CMakeLists.txt  README.md  disboard.cpp  disboard.h
example/: example.cpp  example.qml
impl/: CMakeLists.txt
impl/assets/: CMakeLists.txt
impl/controller/: CMakeLists.txt  controller.cpp  controller.h  disboard.cpp  disboard.h  move.cpp  move.h  movelistmodel.cpp  movelistmodel.h  piece.cpp  piece.h  square.cpp  square.h
impl/controller/rust/: Cargo.toml
impl/controller/rust/src/: lib.rs
impl/js/: BoardView.mjs
impl/qml/: BasePiece.qml  BoardBackground.qml  BoardImpl.qml  CaptureHintRect.qml  DragArea.qml  HighlightRect.qml  HintRect.qml  HoverRect.qml  PhantomPiece.qml  Piece.qml  PromotionWindow.qml  Square.qml
impl/rust/: Cargo.toml  build.rs
impl/rust/src/: lib.rs
impl/rust/src/board_con/: mod.rs
impl/rust/src/board_con/p/: mod.rs  signals.rs  slots.rs
