[package]
name = "disboard-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
cxx-qt = "0.5"
cxx-qt-lib = "0.5"

sac = { package = "sacrifice", version = "0.1.8"}

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[build-dependencies]
cxx-qt-build = "0.5"

[profile.release]
opt-level = "z"
lto = true
