[package]
name = "disboard-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"

sac = { package = "sacrifice", version = "0.1.9"}

[dependencies.uuid]
version = "1.3"
features = ["v4", "fast-rng"]

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = "z"
lto = true
